RL: Added double DQN

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1714,6 +1714,46 @@
     "\n",
     "4. Repeat until convergence:\n",
     "   - Continue running episodes until $\\hat{q}(s, a; w)$ stabilizes.\n",
+    "   \n",
+    "## Double DQN\n",
+    "The DQN algorithm usually have high bias due to the max operation since it always picks the maximum noisy estiamtion, which is an overestiamtion of the true action value, and the positive bias accumulate overtime\n",
+    "\n",
+    "Although reducing the bias does not necessarily means to achieve a more optimal policy if the relative order of all action values are maintained, this highly depends on the nature of the estimate (variance/noisiness).\n",
+    "\n",
+    "Double DQN by keeping two independent experience sets, we use one to select the max action, but use the value of the other one, which is not necessarily the maximum anymore. Overtime, the average will converge closer to the true action value (lower bias)\n",
+    "\n",
+    "## Double DQN\n",
+    "The standard DQN algorithm usually have high postive bias due to the use of the `max` operator, meaning the netowrk action value estimations are always an over estimate. This is because when obtaining the target, its value $Y_t$ is calculated as:\n",
+    "$$Y_t^{\\text{DQN}} = R_{t+1} + \\gamma \\max_{a} Q(S_{t+1}, a; w_t^-)$$\n",
+    "\n",
+    "The use of `max` operator will inherently select the action with the highest positive noise, meaning the algorithm systematically overestimates the value of the next state. Because bootstrapping is used, this positive error accumulates and propagates backward through the states, leading to over estimates.\n",
+    "\n",
+    "Although reducing the bias does not necessarily means to achieve a more optimal policy if all values are overestimated equally such that the relative ranking of actions remains preserved, in practice, the bias are almost always **non-uniform**.\n",
+    "\n",
+    "To solve this, we must decouple **Action Selection** (choosing the \"best\" action) from **Action Evaluation** (estimating its value).\n",
+    "\n",
+    "### Tabular Case of Double DQN\n",
+    "The original theoretical solution maintaining two independent estimators, $Q_A$ and $Q_B$, trained on separate experience sets.\n",
+    "* **Selection:** Use $Q_A$ to find the best action: $a^* = \\text{argmax}_a Q_A(s, a)$.\n",
+    "* **Evaluation:** Use $Q_B$ to estimate the value of that action: Value $= Q_B(s, a^*)$.\n",
+    "\n",
+    "Since $Q_A$ and $Q_B$ are independent, $E[Q_B(s, \\text{argmax} Q_A)] = Q(s, a^*)$. The overestimation is eliminated because the noise in $Q_B$ is uncorrelated with the selection made by $Q_A$.\n",
+    "\n",
+    "### Function Approximation Case of Double DQN\n",
+    "Splitting data into two sets is data-inefficient for Deep RL. Instead, Double DQN utilizes the **Target Network** directly as the second network.\n",
+    "\n",
+    "We use the Online Network to **select** the action (greedy policy) and the Target Network to **evaluate** it.\n",
+    "\n",
+    "**The Double DQN Update Equation:**\n",
+    "\n",
+    "$$Y_t^{\\text{DoubleDQN}} = R_{t+1} + \\gamma \\underbrace{Q(S_{t+1}, \\overbrace{\\text{argmax}_{a} Q(S_{t+1}, a; w_t)}^{\\text{Selection (Online Net)}}; w_t')}_{\\text{Evaluation (Target Net)}}$$\n",
+    "\n",
+    "1.  **Selection:** The Online network ($w$) determines *which* action is the best.\n",
+    "2.  **Evaluation:** The Target network ($w'$) calculates the Q-value of *that specific action*.\n",
+    "\n",
+    "By using the Target network for evaluation, the value we update toward is not necessarily the maximum value in the Target network, but rather the value of the action chosen by the Online network. This means the action value used for calculating the target is not always the overestimation, and with many samples, the action value estimation will converge closer to the true value (significantly lower bias).\n",
+    "\n",
+    "<img src=\"https://www.researchgate.net/profile/Jingjing-Jiang-13/publication/365209751/figure/fig5/AS:11431281095620697@1667964716227/Double-DQN-algorithm-structure-Han-et-al-used-Double-DQN-to-train-a-HTEV-based-EMS.ppm\" width=700>\n",
     "\n",
     "## Systematic Exploration in Function Approximation\n",
     "Systematic exploration is critical in reinforcement learning with function approximation because it ensures that the agent explores different parts of the environment instead of getting stuck in a small subset of states or actions. This broader exploration helps the agent build a more accurate understanding of the environment and improves the quality of the learned policy.\n",
