RL: added policy based learning

--- a/notebooks/Explicit Distribution Learning.ipynb
+++ b/notebooks/Explicit Distribution Learning.ipynb
@@ -314,7 +314,18 @@
     "2.  **The Proxy:** We define a parameterized energy model $f_\\theta(x)$ (usually a deep neural network).\n",
     "3.  **The Transformation:** We convert this energy model into an explicit distribution using the Boltzmann equation.\n",
     "4.  **The Learning Process:** We adjust $\\theta$ to assign **low** energy for real samples and high energy for other points in the space ($x_{fake}$).\n",
-    "$$\\text{Data } x \\xrightarrow{\\text{Learn } f_\\theta} \\text{Energy } E(x) \\xrightarrow{\\text{Boltzmann}} \\text{Distribution } p(x)$$"
+    "$$\\text{Data } x \\xrightarrow{\\text{Learn } f_\\theta} \\text{Energy } E(x) \\xrightarrow{\\text{Boltzmann}} \\text{Distribution } p(x)$$\n",
+    "\n",
+    "### EBM Training\n",
+    "log likelihood formula of the boltzman distribution and manipulation\n",
+    "\n",
+    "empirical expectation of the energy model, where the dataset is sampled from the data distribution P, but this is an estimate because we assume each sample has equal probability 1/n\n",
+    "\n",
+    "calculating the partition function is intractable because it requires to sum or integrate over the entire data space.\n",
+    "\n",
+    "manipulate the derivative of log of the partition function, and convert into expectation form sampling from the model distribution\n",
+    "\n",
+    "final MLE objective in expectation format. show that we want to give low energy to the sample from the real distribution and high energy to samples from the model distribution Pw. This forces the model to shift its distribution closer to the real distribution so that the model cannot distinguish."
    ]
   },
   {
