--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1716,28 +1716,21 @@
     "   - Continue running episodes until $\\hat{q}(s, a; w)$ stabilizes.\n",
     "   \n",
     "## Double DQN\n",
-    "The DQN algorithm usually have high bias due to the max operation since it always picks the maximum noisy estiamtion, which is an overestiamtion of the true action value, and the positive bias accumulate overtime\n",
-    "\n",
-    "Although reducing the bias does not necessarily means to achieve a more optimal policy if the relative order of all action values are maintained, this highly depends on the nature of the estimate (variance/noisiness).\n",
-    "\n",
-    "Double DQN by keeping two independent experience sets, we use one to select the max action, but use the value of the other one, which is not necessarily the maximum anymore. Overtime, the average will converge closer to the true action value (lower bias)\n",
-    "\n",
-    "## Double DQN\n",
     "The standard DQN algorithm usually have high postive bias due to the use of the `max` operator, meaning the netowrk action value estimations are always an over estimate. This is because when obtaining the target, its value $Y_t$ is calculated as:\n",
-    "$$Y_t^{\\text{DQN}} = R_{t+1} + \\gamma \\max_{a} Q(S_{t+1}, a; w_t^-)$$\n",
+    "$$Y_t^{\\text{DQN}} = R_{t+1} + \\gamma \\max_{a} q(S_{t+1}, a; w_t^-)$$\n",
     "\n",
     "The use of `max` operator will inherently select the action with the highest positive noise, meaning the algorithm systematically overestimates the value of the next state. Because bootstrapping is used, this positive error accumulates and propagates backward through the states, leading to over estimates.\n",
     "\n",
-    "Although reducing the bias does not necessarily means to achieve a more optimal policy if all values are overestimated equally such that the relative ranking of actions remains preserved, in practice, the bias are almost always **non-uniform**.\n",
+    "Although reducing the bias does not necessarily means to achieve a more optimal policy if all values are overestimated equally such that the relative ranking of actions remains preserved, in practice, the bias are almost always **non-uniform**, meaning the action ranking will be different.\n",
     "\n",
     "To solve this, we must decouple **Action Selection** (choosing the \"best\" action) from **Action Evaluation** (estimating its value).\n",
     "\n",
     "### Tabular Case of Double DQN\n",
-    "The original theoretical solution maintaining two independent estimators, $Q_A$ and $Q_B$, trained on separate experience sets.\n",
-    "* **Selection:** Use $Q_A$ to find the best action: $a^* = \\text{argmax}_a Q_A(s, a)$.\n",
-    "* **Evaluation:** Use $Q_B$ to estimate the value of that action: Value $= Q_B(s, a^*)$.\n",
+    "The original theoretical solution maintaining two independent estimators, $q_A$ and $q_B$, trained on separate experience sets.\n",
+    "* **Selection:** Use $q_A$ to find the best action: $a^* = \\text{argmax}_a q_A(s, a)$.\n",
+    "* **Evaluation:** Use $q_B$ to estimate the value of that action: Value $= q_B(s, a^*)$.\n",
     "\n",
-    "Since $Q_A$ and $Q_B$ are independent, $E[Q_B(s, \\text{argmax} Q_A)] = Q(s, a^*)$. The overestimation is eliminated because the noise in $Q_B$ is uncorrelated with the selection made by $Q_A$.\n",
+    "Since $q_A$ and $q_B$ are independent, $E[q_B(s, \\text{argmax} q_A)] = q(s, a^*)$. The overestimation is eliminated because the noise in $q_B$ is uncorrelated with the selection made by $q_A$.\n",
     "\n",
     "### Function Approximation Case of Double DQN\n",
     "Splitting data into two sets is data-inefficient for Deep RL. Instead, Double DQN utilizes the **Target Network** directly as the second network.\n",
@@ -1746,12 +1739,12 @@
     "\n",
     "**The Double DQN Update Equation:**\n",
     "\n",
-    "$$Y_t^{\\text{DoubleDQN}} = R_{t+1} + \\gamma \\underbrace{Q(S_{t+1}, \\overbrace{\\text{argmax}_{a} Q(S_{t+1}, a; w_t)}^{\\text{Selection (Online Net)}}; w_t')}_{\\text{Evaluation (Target Net)}}$$\n",
+    "$$Y_t^{\\text{DoubleDQN}} = R_{t+1} + \\gamma \\underbrace{q(S_{t+1}, \\overbrace{\\text{argmax}_{a} q(S_{t+1}, a; w_t)}^{\\text{Selection (Online Net)}}; w_t')}_{\\text{Evaluation (Target Net)}}$$\n",
     "\n",
     "1.  **Selection:** The Online network ($w$) determines *which* action is the best.\n",
     "2.  **Evaluation:** The Target network ($w'$) calculates the Q-value of *that specific action*.\n",
     "\n",
-    "By using the Target network for evaluation, the value we update toward is not necessarily the maximum value in the Target network, but rather the value of the action chosen by the Online network. This means the action value used for calculating the target is not always the overestimation, and with many samples, the action value estimation will converge closer to the true value (significantly lower bias).\n",
+    "By using the Target network for evaluation, the value we update toward is not necessarily the maximum value in the Target network, but rather the value of the action chosen by the Online network. This means the action value used for calculating the target is not always an overestimation, and with many samples, the action value estimation will converge closer to the true value (significantly lower bias).\n",
     "\n",
     "<img src=\"https://www.researchgate.net/profile/Jingjing-Jiang-13/publication/365209751/figure/fig5/AS:11431281095620697@1667964716227/Double-DQN-algorithm-structure-Han-et-al-used-Double-DQN-to-train-a-HTEV-based-EMS.ppm\" width=700>\n",
     "\n",
@@ -1816,7 +1809,7 @@
     "\n",
     "$$r(\\pi) \\leftarrow r(\\pi) + \\beta \\big(R_{t+1} - r(\\pi)\\big)$$\n",
     "\n",
-    "$\\beta$ is a small step-size parameter. A smaller \\beta ensures that the estimate of the average reward changes gradually, preventing instability or large fluctuations due to single, noisy samples.\n"
+    "$\\beta$ is a small step-size parameter. A smaller $\\beta$ ensures that the estimate of the average reward changes gradually, preventing instability or large fluctuations due to single, noisy samples."
    ]
   },
   {
@@ -1824,9 +1817,24 @@
    "id": "fddfeb32",
    "metadata": {},
    "source": [
-    "# Policy Gradient Method\n",
+    "# Policy Based Learning\n",
     "So far, all the methods we have introduced are value-based learning methods. In these methods, the agent first learns value functions, such as the state-value function $v(s)$ or the action-value function $q(s, a)$ from experience. Then, the agent selects actions based on these value estimates, and the policy is indirectly derived from the learned value functions. In other words, the value functions act as a bridge between the agent’s current state and its decision-making policy.\n",
     "\n",
+    "However, value-based methods, such as DQN, struggle with **continuous actions** space because the network typically outputs a discrete value for every possible action to easily compute $\\max_{a} q(s, a)$, and if the action space is continuous (infinite possibilities), we cannot output a vector of infinite length. Alternatively, if we feed the action as an input (i.e., $q(s, a)$), finding the greedy action becomes an optimization problem: we must solve $\\arg\\max_{a} q(s, a)$ at every single time step, which is computationally too expensive for training.\n",
+    "\n",
+    "To solve this, we typically use **Policy-Based** approaches:\n",
+    "1.  **Policy Gradient :**\n",
+    "    * We train a single **Policy Network** that takes the **State** as input and outputs a **probability distribution** over actions (e.g., the mean and variance of a Gaussian) to sample from.\n",
+    "    * The network is updated directly using the gradient of the expected return, gradually shifting the distribution probabilities toward optimal actions.\n",
+    "\n",
+    "2.  **Actor-Critic Method:**\n",
+    "    * We train **two separate networks**:\n",
+    "        * **Actor (Policy):** Takes State $\\to$ Outputs Action. It learns to select the best action directly.\n",
+    "        * **Critic (Value):** Takes State (and sometimes Action) $\\to$ Outputs Value. It evaluates how good the Actor's selection was.\n",
+    "    * The Critic provides a low-variance feedback signal (the \"score\") to train the Actor more efficiently than raw returns.\n",
+    "    \n",
+    "    \n",
+    "## Policy Gradient Method\n",
     "Instead of learning value functions and deriving a policy from them, we can directly learn the policy as a parameterized function and optimize it. This method is called the policy gradient method. We represent the policy by $\\pi(a \\mid s, \\theta)$, which gives the probability of selecting action a given state $s$ and parameters $\\theta$. Here, $\\theta$ represents the learnable parameters of the policy.\n",
     "\n",
     "For $\\pi(a \\mid s, \\theta)$ to be a valid probability distribution, it must satisfy two constraints:\n",
@@ -1843,7 +1851,7 @@
     "\n",
     "After the softmax function, the probability distribution for all actiosn under every states is now valid.\n",
     "\n",
-    "## Advanages of Policy Gradient Method\n",
+    "### Advanages of Policy Gradient Method\n",
     "The optimal policy for a given problem can be deterministic or stochastic. In value-based methods, improving the policy usually involves making it greedy or $\\epsilon$-greedy with respect to the current action-value estimates.\n",
     "\n",
     "However, this approach has two major limitations:\n",
@@ -1856,7 +1864,7 @@
     "\n",
     "Also, in some problems, the value function can be extremely complex, while the policy itself is simple. In such cases, directly learning the policy is more efficient and practical than learning a full value function and deriving the policy indirectly. However, this is problem-dependent as there are also situations where value-based methods are simpler and more stable.\n",
     "\n",
-    "## Policy Gradient Objective\n",
+    "### Policy Gradient Objective\n",
     "The goal of reinforcement learning is to find a policy that maximizes the agent’s cumulative rewards. For policy gradient methods, we directly optimize a parameterized policy $\\pi(a \\mid s, \\theta)$. The objective function for this approach can be defined as the average reward under a given policy, where\n",
     "\n",
     "$$r(\\pi) = \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\pi(a \\mid s) \\sum_{s’, r} p(s’, r \\mid s, a) , r$$\n",
@@ -1874,7 +1882,7 @@
     "\n",
     "$$\\theta^* = \\arg \\max_\\theta r(\\pi_\\theta)$$\n",
     "\n",
-    "## Policy Gradient Theorem\n",
+    "### Policy Gradient Theorem\n",
     "Once we define the learning objective, our next step is to optimize it by adjusting the policy parameters $\\theta$. Since our goal is to maximize the objective, we use gradient ascent to update the parameters in the direction of increasing performance. The gradient of the average reward objective is\n",
     "\n",
     "$$\n",
@@ -1910,7 +1918,7 @@
     "\n",
     "$$\\theta_{t+1} = \\theta_t + \\alpha \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\nabla_{\\theta} \\pi(a \\mid s) , q_{\\pi}(s, a)$$\n",
     "\n",
-    "## Stochastic Policy Gradient\n",
+    "### Stochastic Policy Gradient\n",
     "In the current policy gradient expression, it requires summing over all possible state action pairs to computes the full gradient, which is inpractical since the state action space is often very large.\n",
     "$$\\nabla_{\\theta} r(\\pi) = \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\nabla_{\\theta} \\pi(a \\mid s) , q_{\\pi}(s, a)$$\n",
     "\n",
