Added EBM training

--- a/notebooks/Explicit Distribution Learning.ipynb
+++ b/notebooks/Explicit Distribution Learning.ipynb
@@ -317,15 +317,70 @@
     "$$\\text{Data } x \\xrightarrow{\\text{Learn } f_\\theta} \\text{Energy } E(x) \\xrightarrow{\\text{Boltzmann}} \\text{Distribution } p(x)$$\n",
     "\n",
     "### EBM Training\n",
-    "log likelihood formula of the boltzman distribution and manipulation\n",
+    "To train an Energy-Based Model, our primary goal is to maximize the likelihood of the observed data. Given a dataset $\\mathcal{D} = \\{x^{(1)}, x^{(2)}, \\dots, x^{(N)}\\}$ sampled from the true data distribution $p_{data}(x)$, we wish to find parameters $\\theta$ that maximize the log-likelihood:\n",
     "\n",
-    "empirical expectation of the energy model, where the dataset is sampled from the data distribution P, but this is an estimate because we assume each sample has equal probability 1/n\n",
+    "$$\\mathcal{L}(\\theta) = \\sum_{i=1}^{N} \\log p_\\theta(x^{(i)})$$\n",
     "\n",
-    "calculating the partition function is intractable because it requires to sum or integrate over the entire data space.\n",
+    "Substituting the definition of the Boltzmann distribution $p_\\theta(x) = \\frac{\\exp(-E_\\theta(x))}{Z(\\theta)}$, the objective function for a single data point becomes:\n",
     "\n",
-    "manipulate the derivative of log of the partition function, and convert into expectation form sampling from the model distribution\n",
+    "$$\\log p_\\theta(x) = \\log \\left( \\frac{\\exp(-E_\\theta(x))}{Z(\\theta)} \\right) = -E_\\theta(x) - \\log Z(\\theta)$$\n",
     "\n",
-    "final MLE objective in expectation format. show that we want to give low energy to the sample from the real distribution and high energy to samples from the model distribution Pw. This forces the model to shift its distribution closer to the real distribution so that the model cannot distinguish."
+    "Thus, the total log-likelihood we wish to maximize is:\n",
+    "\n",
+    "$$\\mathcal{L}(\\theta) = - \\underbrace{\\log Z(\\theta)}_{\\text{Partition Term}} - \\sum_{i=1}^{N} \\underbrace{E_\\theta(x^{(i)})}_{\\text{Energy Term}} $$\n",
+    "\n",
+    "The second term of the loss function represents the **\"average\"** energy to the real data points. We can rewrite this sum as an **empirical (estimated) expectation** from the true data distribution $p_{data}$, where\n",
+    "\n",
+    "$$\\frac{1}{N} \\sum_{i=1}^{N} E_\\theta(x^{(i)}) \\approx \\mathbb{E}_{x \\sim p_{data}} [E_\\theta(x)]$$\n",
+    "\n",
+    "However, this expectation is estimated because, we do not have access to the infinite continuous distribution $p_{data}$. We only have a finite dataset and assume each sample in our dataset has an equal probability of $1/N$.\n",
+    "\n",
+    "The first term, $\\log Z(\\theta)$, ensures the distribution is normalized.\n",
+    "$$Z(\\theta) = \\int_{x \\in \\mathcal{X}} \\exp(-E_\\theta(x)) \\, dx$$\n",
+    "\n",
+    "Calculating this directly is **intractable** for high-dimensional data (e.g., images) because it requires integrating (or summing) over the entire data space. Consequently, we cannot easily evaluate the loss $\\mathcal{L}(\\theta)$ itself.\n",
+    "\n",
+    "However, for training via Gradient Descent, we do not need the value of the loss; we only need its **gradient** $\\nabla_\\theta \\mathcal{L}$. \n",
+    "\n",
+    "For the **Energy Term**, the gradient is \n",
+    "$$\\nabla_\\theta \\mathbb{E}_{x \\sim p_{data}} [E_\\theta(x)] = \\mathbb{E}_{x \\sim p_{data}} [\\nabla_\\theta E_\\theta(x)]$$\n",
+    "This computation is easy because it is the gradient with respect to the energy model. Since the energy model is just the neural network, this gradient is can be easily calculated with backpropagation.\n",
+    "\n",
+    "For the **Partition Term**,\n",
+    "$$\\nabla_\\theta \\log Z(\\theta) = \\frac{1}{Z(\\theta)} \\nabla_\\theta Z(\\theta)$$\n",
+    "\n",
+    "Substitute the integral definition of $Z(\\theta)$:\n",
+    "$$\\nabla_\\theta Z(\\theta) = \\nabla_\\theta \\int \\exp(-E_\\theta(x)) \\, dx = \\int \\nabla_\\theta \\exp(-E_\\theta(x)) \\, dx = \\int \\exp(-E_\\theta(x)) \\cdot \\left( -\\nabla_\\theta E_\\theta(x) \\right) \\, dx$$\n",
+    "\n",
+    "Now, substitute this back into the expression for $\\nabla_\\theta \\log Z(\\theta)$:\n",
+    "\n",
+    "$$\\nabla_\\theta \\log Z(\\theta) = \\frac{1}{Z(\\theta)} \\int \\exp(-E_\\theta(x)) \\left( -\\nabla_\\theta E_\\theta(x) \\right) \\, dx$$\n",
+    "\n",
+    "We can distribute $\\frac{1}{Z(\\theta)}$ inside the integral since it is independent from $x$. Notice that $\\frac{\\exp(-E_\\theta(x))}{Z(\\theta)}$ is exactly the Boltzmann Distribution (model probability) $p_\\theta(x)$:\n",
+    "\n",
+    "$$\\nabla_\\theta \\log Z(\\theta) = \\int \\underbrace{\\frac{\\exp(-E_\\theta(x))}{Z(\\theta)}}_{p_\\theta(x)} \\left( -\\nabla_\\theta E_\\theta(x) \\right) \\, dx$$\n",
+    "\n",
+    "This integral is simply the definition of an expectation over the **model distribution** without the hard to compute partition function:\n",
+    "\n",
+    "$$\\nabla_\\theta \\log Z(\\theta) = \\mathbb{E}_{x \\sim p_\\theta(\\cdot)} [-\\nabla_\\theta E_\\theta(x)]$$\n",
+    "\n",
+    "> This term is the expectation of samples from the **Current Model Distribution**, meaning as long as we can sample from the current model, we are able to train the EBM. Sampling is also exponentially hard in high dimensional space, but we can apply tricke for it to work.\n",
+    "\n",
+    "### Final MLE Gradient\n",
+    "Combining the derivatives of the **Energy Term** and the **Partition Term**, the final gradient of the log-likelihood is:\n",
+    "\n",
+    "$$\\nabla_\\theta \\mathcal{L} = - \\mathbb{E}_{x \\sim p_{data}} [\\nabla_\\theta E_\\theta(x)] + \\mathbb{E}_{x \\sim p_\\theta} [\\nabla_\\theta E_\\theta(x)]$$\n",
+    "\n",
+    "Therefore, the original loss function (by removing the gradient) can be written as\n",
+    "\n",
+    "$$\\mathcal{L} = - \\mathbb{E}_{x \\sim p_{data}} [E_\\theta(x)] + \\mathbb{E}_{x \\sim p_\\theta} [E_\\theta(x)]$$\n",
+    "\n",
+    "This loss function dictates the training dynamics of an Energy-Based Model:\n",
+    "\n",
+    "1.  **Energy Term (Data):** We want to **decrease** (minimize) the energy of real data points $x \\sim p_{data}$. This pulls the energy manifold down at locations where data exists.\n",
+    "2.  **Partition Term (Model):** We want to **increase** (maximize) the energy of samples generated by the current model $x \\sim p_\\theta$. This pushes the energy manifold up at locations where the model currently assigns high probability (hallucinations).\n",
+    "\n",
+    "Essentially, by minimizing the energy of real data and maximizing the energy of model samples (\"fake\" data), the model is forced to distinguish real and fake samples, and the graidnet pushes the model distribution $p_\\theta$ to shift closer to the real distribution $p_{data}$. This forces the model to learn to generate samples more similar to the real sample. The training reaches equilibrium when the model samples match the real data statistics, meaning the model can no longer distinguish between the two. This is the **Self-Adversarial Nature** of EBM (different from GAN). "
    ]
   },
   {
