RL: Updated policy gradient

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1768,9 +1768,9 @@
     "\n",
     "$$r(\\pi) = \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\pi(a|s) \\, \\mathbb{E}[R_{t+1} \\mid S_t = s, A_t = a]$$\n",
     "\n",
-    "$\\mu_{\\pi}(s)$ is the stationary distribution of states under policy $\\pi$, representing how frequently each state is visited in the long run. By weighting rewards using $\\mu_{\\pi}(s)$, states that are visited more often have greater influence on the average reward.\n",
+    "$\\mu_{\\pi}(s)$ is the stationary distribution of states under policy $\\pi$, representing how frequently each state is visited in the long run. By weighting rewards using $\\mu_{\\pi}(s)$, states that are visited more often have greater influence on the average reward. We use the instantaneous reward $R_{t+1}$ instead of the return because the long term behaviour of the policy is encoded in $\\mu(s)$. By knowing the frequency of agent ends up in each state and how good it is immediately $R_{t+1}$ (ignoring future discount), we can calculate the average rate of reward without needing to sum up a trajectory.\n",
     "\n",
-    "The average reward of a policy, $r(\\pi)$ is a single scalar value. So, we can easily compares two policies by comparing their average reward, and the policy with the higher average reward is better. The optimal policy, $\\pi_*$, is then the one that maximizes the average reward\n",
+    "Since the average reward of a policy, $r(\\pi)$ is a single scalar value, we can easily compares two policies by comparing their average reward, and the policy with the higher average reward is better. The optimal policy, $\\pi_*$, is then the one that maximizes the average reward\n",
     "\n",
     "$$\\pi_* = \\arg\\max_\\pi r(\\pi)$$\n",
     "\n",
@@ -1850,6 +1850,54 @@
     "$$\\pi(a \\mid s, \\theta) = \\frac{e^{h(s, a, \\theta)}}{\\sum_{a’} e^{h(s, a’, \\theta)}}$$\n",
     "\n",
     "After the softmax function, the probability distribution for all actiosn under every states is now valid.\n",
+    "\n",
+    "However, when dealing with infinite action space, it is impossbile to sum over all possible actions. Therefore, we can train the network to output a mean and a variance of the action space and sample from it.\n",
+    "\n",
+    "Typically, there are two formulations of policy gradient approach\n",
+    "1. Episodic formulation: Similar to most RL algorithms, the goal of this approach it to maximize the total discounted return from the start state by sampling multiple trajectories from it.\n",
+    "2. Average reward formulation: We deal with Maximize the average rate of reward per time step in the steady state. This approach is typically used when dealing with infinite horizon tasks.\n",
+    "\n",
+    "\n",
+    "## Policy Gradient Method\n",
+    "\n",
+    "Unlike value-based methods (like DQN) that learn value functions and derive a policy from them (e.g., via $\\epsilon$-greedy), **Policy Gradient methods** learn the policy directly as a parameterized function $\\pi(a \\mid s, \\theta)$. Here, $\\theta$ represents the learnable parameters (weights) of the neural network.\n",
+    "\n",
+    "For $\\pi(a \\mid s, \\theta)$ to be a valid probability distribution, it must satisfy two constraints:\n",
+    "1.  **Non-negativity:** $\\pi(a \\mid s, \\theta) \\geq 0 \\quad \\forall a \\in \\mathcal{A}, s \\in \\mathcal{S}$\n",
+    "2.  **Normalization:** $\\sum_a \\pi(a \\mid s, \\theta) = 1 \\quad \\forall s \\in \\mathcal{S}$\n",
+    "\n",
+    "These ensure that for any given state, the probabilities of all actions sum to 1. The way we parameterize the policy depends on whether the action space is Discrete or Continuous.\n",
+    "\n",
+    "**A. Discrete Action Space (Softmax Policy)**\n",
+    "We define a real-valued function called the **action preference**, denoted as $h(s, a, \\theta)$. This represents the \"unnormalized logit\" or score for taking action $a$. To convert these scores into valid probabilities, we apply the **Softmax function**:\n",
+    "\n",
+    "$$\\pi(a \\mid s, \\theta) = \\frac{e^{h(s, a, \\theta)}}{\\sum_{b} e^{h(s, b, \\theta)}}$$\n",
+    "\n",
+    "**B. Continuous Action Space (Gaussian Policy)**\n",
+    "When the action space is infinite (continuous), it is impossible to sum over all actions to compute the normalization term. Instead, we model the policy as a known continuous probability distribution, typically a **Gaussian (Normal) distribution**.\n",
+    "\n",
+    "The network is trained to output the **mean** ($\\mu$) and **variance** ($\\sigma^2$) of the distribution given the state:\n",
+    "$$\\pi(a \\mid s, \\theta) = \\frac{1}{\\sigma(s, \\theta)\\sqrt{2\\pi}} \\exp\\left( -\\frac{(a - \\mu(s, \\theta))^2}{2\\sigma(s, \\theta)^2} \\right)$$\n",
+    "The agent then samples an action from this distribution.\n",
+    "\n",
+    "### Objective Formulations\n",
+    "\n",
+    "To optimize the policy parameters $\\theta$, we must define a performance objective $J(\\theta)$ to maximize. There are two primary formulations, depending on the nature of the task.\n",
+    "\n",
+    "1.  **Episodic Formulation (Start-State Value)**\n",
+    "    * **Use Case:** Episodic tasks where the agent interacts in distinct episodes that eventually terminate (although we can also cut the trajectory after some steps when dealing with inifinte horizon tasks).\n",
+    "    * **Goal:** Maximize the expected total discounted return from the initial start state $S_0$. The agent cares about the cumulative sum of rewards for the specific path taken from start to finish.\n",
+    "    * **Objective Function:**\n",
+    "        $$J(\\theta) = V_{\\pi}(S_0) = \\mathbb{E}_{\\pi} \\left[ \\sum_{t=0}^{T} \\gamma^t R_{t+1} \\mid S_0 \\right]$$\n",
+    "    * **Method:** We sample full trajectories (episodes) and use the return $G_t$ to estimate the gradient.\n",
+    "\n",
+    "2.  **Average Reward Formulation (Steady-State Value)**\n",
+    "    * **Use Case:** Continuing tasks where the agent runs indefinitely without a natural endpoint (Infinite Horizon).\n",
+    "    * **Goal:** Maximize the average **rate** of reward per time step over the long run. Since the task never ends, we look at the rewards obtained in the stationary distribution (where the agent spends its time eventually).\n",
+    "    * **Objective Function:**\n",
+    "        $$J(\\theta) = r(\\pi) = \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\pi(a|s, \\theta) \\mathbb{E}[R \\mid s, a]$$\n",
+    "        *(Where $\\mu_{\\pi}(s)$ is the stationary distribution of states under policy $\\pi$.)*\n",
+    "    * **Method:** We rely on the ergodic property of the MDP, optimizing the policy to shift the stationary distribution $\\mu(s)$ toward high-reward states.\n",
     "\n",
     "### Advanages of Policy Gradient Method\n",
     "The optimal policy for a given problem can be deterministic or stochastic. In value-based methods, improving the policy usually involves making it greedy or $\\epsilon$-greedy with respect to the current action-value estimates.\n",
